working on efficiency

--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -12,7 +12,7 @@
 <template name="Home">
     <!--<a href="https://imgflip.com/i/1k24g3"><img src="https://i.imgflip.com/1k24g3.jpg" title="made at imgflip.com"/></a>-->
 
-    <div   class="no-height-mobil" style="height:1000px; margin-bottom:-5px; width:100%;background-color: #2d3e54;z-index:-1 !important">
+    <div   class="no-height-mobil caratula">
 
         <!--<div data-0="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(214, 30%, 25%), hsl(214, 30%, 25%));"-->
              <!--data-250 ="transform: translate3d(0px, 0px, 0px);background-image: linear-gradient(0deg, hsl(214, 0%, 25%), hsl(214, 30%, 25%));"-->
@@ -24,58 +24,36 @@
     <!--background-size: 110%;-->
     <!--background-repeat: no-repeat;-->
     <!--width: 100%;height: 500px;"> </div>-->
-        <div   data-0="transform: translate3d(0px, 0px, 0px);top:0%" data-251="display:block; top:0%" data-700="top:0%" data-1000="display:none;top:-100%" style="position: fixed;background-color:#2d3e54;background-position: center top;
-    background-size: 110%;
-    background-repeat: no-repeat;
-    width: 100%;height: 700px;"> </div>
+        <div   data-0="transform: translate3d(0px, 0px, 0px);top:0%" data-251="display:block; top:0%" data-700="top:0%" data-1000="display:none;top:-100%" class="background-layer"></div>
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -20px, 0px);"  data-501="display:block; top:0%" data-850="top:0%" data-1000="display:none;top:-100%" style="background-image: url('layer0top.png'); position: fixed;background-position: center top;
-    background-size: 110%;
-    background-repeat: no-repeat;
-    width: 100%;height: 1000px;"> </div>
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -20px, 0px);"  data-501="display:block; top:0%" data-850="top:0%" data-1000="display:none;top:-100%" class="layer-0"> </div>
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -40px, 0px)"  data-501="display:block; top:0%" data-850="top:0%" data-1000="display:none;top:-130%" style="margin-top:-100px;background-image: url('layer1top.png');position: fixed;background-position: bottom center;
-           background-size: auto;
-    background-repeat: no-repeat;
-    width: 100%;height: 1000px;"> </div>
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -40px, 0px)"  data-501="display:block; top:0%" data-850="top:0%" data-1000="display:none;top:-130%" class="layer-1"> </div>
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -100px, 0px)" data-501="display:block; top:0%" data-850="top:0%" data-1000="display:none;top:-130%"  style="margin-left:-10px;margin-top:50px;background-image: url('layer2top.png');position: fixed;background-position: bottom center;
-           background-size: auto;
-    background-repeat: no-repeat;
-    width: 100%;height: 1000px;"> </div>
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -100px, 0px)" data-501="display:block; top:0%" data-850="top:0%" data-1000="display:none;top:-130%" class="layer-2"> </div>
 
         <!--facebokk-->
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-850="top:0px"    data-1000="top:-1100px" data-3000="top:-1100px" data-3500="display:none;top:-2000px"  style="margin-top:800px;background-image: url('letrasTransición.png');position: fixed;background-position: bottom center;
-    width: 100%;height:550px"> </div>
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-850="top:0px"    data-1000="top:-1100px" data-3000="top:-1100px" data-3500="display:none;top:-2000px"  class="layer-letras-transicion"> </div>
 
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-850="top:0px"    data-1000="top:-1000px" data-3000="top:-1000px" data-3500="display:none;top:-2000px"  class="rotation-slow" style="margin-top:900px;background-image: url('letrasTipita2.png');position: fixed;background-position: bottom center;
-    width: 100%;height:550px"> </div>
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-850="top:0px"    data-1000="top:-1000px" data-3000="top:-1000px" data-3500="display:none;top:-2000px"  class="rotation-slow layer-letras-tipita2"> </div>
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-850="top:0px"    data-1000="top:-1000px" data-3000="top:-1000px" data-3500="display:none;top:-2000px" class="rotation-very-slow"  style="margin-top:800px;left:-130px;background-image: url('letrasTipita.png');position: fixed;background-position: bottom left;
-           background-size: auto 1038px;
-    background-repeat: no-repeat;
-    width: 100%;height: 1000px;"> </div>
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-850="top:0px"    data-1000="top:-1000px" data-3000="top:-1000px" data-3500="display:none;top:-2000px" class="rotation-very-slow layer-letras-tipita"> </div>
 
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-850="top:0px"    data-1000="top:-900px" data-3000="top:-900px" data-3500="display:none;top:-2000px" style="margin-top:1000px;margin-left:30px;background-image: url('tipita.png');position: fixed;background-position: bottom left;
-           background-size: auto;
-    background-repeat: no-repeat;
-    width: 50%;height: 1000px;"> </div>
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-850="top:0px"    data-1000="top:-900px" data-3000="top:-900px" data-3500="display:none;top:-2000px" class="layer-tipita"> </div>
 
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-850="top:0px"    data-1000="top:-900px" data-3000="top:-900px" data-3500="display:none;top:-2000px" style="margin-top:1335px;margin-left:30px;position: fixed;background-position: bottom left;">
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-850="top:0px"    data-1000="top:-900px" data-3000="top:-900px" data-3500="display:none;top:-2000px" class="layer-satie">
            <span class="{{satie}}">S</span>
         </div>
 
 
-        <div data-0="display:none" data-1000="display:block; top:0%" data-1500="display:block; top:50%" data-2000="display:block; top:50%" data-3000="display:block;top:50%" data-3500="display:none;top:-50%" style="margin-top:-90px;position: fixed;width:100%">
+        <div data-0="display:none" data-1000="display:block; top:0%" data-1500="display:block; top:50%" data-2000="display:block; top:50%" data-3000="display:block;top:50%" data-3500="display:none;top:-50%" class="unite-a-container">
             <h1>
                 <span data-1000="margin-top:-900px" data-1800="margin-top:20px" data-2200="margin-top:0px" class="uniteALink" style="right:60px">A</span>
-                <!--<span data-2500="margin-top:-1000px" data-3000="margin-top:10px" data-3500="margin-top:0px" class="uniteALink" style="right:115px"></span>-->
-                <!--<span data-1000="margin-top:-1000px" data-3200="margin-top:0px" data-3500="margin-top:0px" class="uniteALink" style="right:195px"></span>-->
                 <span data-1500="margin-top:-1000px" data-1800="margin-top:0px" data-2200="margin-top:0px" class="uniteALink" style="right:180px">E</span>
                 <span data-1500="margin-top:-800px" data-2100="margin-top:5px" data-2200="margin-top:0px" class="uniteALink" style="right:250px">T</span>
                 <span data-1500="margin-top:-1200px" data-1800="margin-top:-25px" data-2200="margin-top:0px" class="uniteALink" style="right:315px">I</span>
@@ -84,7 +62,7 @@
             </h1>
         </div>
 
-        <div data-0="display:none" data-1000="display:block; top:0%" data-1500="display:block; top:50%" data-2000="display:block; top:50%" data-3000="display:block;top:50%" data-3500="display:none;top:-50%" style="position: fixed;width:100%">
+        <div data-0="display:none" data-1000="display:block; top:0%" data-1500="display:block; top:50%" data-2000="display:block; top:50%" data-3000="display:block;top:50%" data-3500="display:none;top:-50%" class="fixed-w100">
             <h1>
                 <span data-1000="margin-top:-1000px" data-1800="margin-top:-20px" data-2200="margin-top:0px" class="facebookLink" style="right:40px">K</span>
                 <span data-1500="margin-top:-1000px" data-1800="margin-top:10px" data-2200="margin-top:0px" class="facebookLink" style="right:115px">O</span>
@@ -94,30 +72,21 @@
                 <span data-1500="margin-top:-700px" data-1800="margin-top:-100px" data-2200="margin-top:0px" class="facebookLink" style="right:430px">C</span>
                 <span data-1500="margin-top:-1000px" data-1800="margin-top:0px" data-2200="margin-top:0px" class="facebookLink" style="right:505px">A</span>
                 <span data-1500="margin-top:-1000px" data-2100="margin-top:15px" data-2200="margin-top:0px" class="facebookLink" style="right:580px">F</span>
-                <a data-1000="margin-top:-1000px;display:none" data-1300="margin-top:-10px;display:none" data-2200="margin-top:-97px;display:block" class="facebookLink-click" href="https://www.facebook.com/groups/clubdelectura.uy" target="_blank" style="cursor: pointer;position: fixed; width: 630px; height: 169px;right: 35px; margin-top:-97px; display: block;"></a>
+                <a data-1000="margin-top:-1000px;display:none" data-1300="margin-top:-10px;display:none" data-2200="margin-top:-97px;display:block" class="facebookLink-click unite-a-clicker" href="https://www.facebook.com/groups/clubdelectura.uy" target="_blank"></a>
             </h1>
             <br>
 
         </div>
         <!--<div ata-0="transform: translate3d(0px, 0px, 0px);top:95%" data-1000="transform: translate3d(0px, -150px, 0px);top:100%" data-1001="display:block;bottom:100%" data-1500="top:100%" data-2000="top:80%" data-2500="top:50%" style="text-align:right;background-color:green;position: fixed;background-position: bottom right;"><h3><span >FACEBOOK</span></h3>-->
         <!--</div>-->
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -150px, 0px)" data-501="display:block; top:0%" data-850="top:0%" data-1000="display:none;top:-120%"   style="margin-top:800px;background-color:#357c8d;position: fixed;background-position: bottom center;
-           background-size: auto;
-    background-repeat: no-repeat;
-    width: 100%;height: 400px;"> </div>
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -150px, 0px)" data-501="display:block; top:0%" data-850="top:0%" data-1000="display:none;top:-120%"   class="layer-box"></div>
 
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -150px, 0px)" data-501="display:block; top:0%" data-850="top:0%" data-1000="display:none;top:-120%"   style="margin-top: 100px; background-image: url('layer3top.png');position: fixed;background-position: bottom center;
-           background-size: auto;
-    background-repeat: no-repeat;
-    width: 100%;height: 1000px;"> </div>
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -150px, 0px)" data-501="display:block; top:0%" data-850="top:0%" data-1000="display:none;top:-120%"   class="layer-3"> </div>
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -30px, 0px)" data-501="display:block; top:0%" data-850="top:0%" data-1000="display:none;top:-100%"   style="margin-top:100px;background-image: url('logo.png');position: fixed;background-position: center top;
-    background-size: auto 190px;
-    background-repeat: no-repeat;
-    width: 100%;height: 1000px;"> </div>
+        <div data-0="transform: translate3d(0px, 0px, 0px);" data-500="transform: translate3d(0px, -30px, 0px)" data-501="display:block; top:0%" data-850="top:0%" data-1000="display:none;top:-100%"   class="layer-logo"> </div>
         <div ></div>
       <!--<image src= "/imports/images/layer0top.png">-->
 <!---->
@@ -141,10 +110,10 @@
 
 
     <div id="body" style="margin-top:-5px;position:absolute;z-index:-1;width:100%; height:auto;background-color:#2d3e54">
-        <div data-2900="top:100%" data-3400="top:0" class="rotation-very-slow" style="background-position:center top;background-image:url('letras_lineadetiempo.png'); background-repeat: no-repeat;position:fixed;width:100%;min-height:100vh;margin-top:0%"></div>
-        <div data-2900="top:100%" data-3400="top:0" class="rotation-slow" style="background-position:center top;background-image:url('letras_lineadetiempo2.png');background-repeat: no-repeat;position:fixed;width:100%;min-height:100vh;margin-top:0%;top:0px;"></div>
+        <div data-2900="top:100%" data-3400="top:0" class="rotation-very-slow layer-linea-del-tiempo"></div>
+        <div data-2900="top:100%" data-3400="top:0" class="rotation-slow layer-linea-del-tiempo2"></div>
 
-        <div style="z-index:6;width:100%;margin-top:4500px;height:{{getheight}}vh;background-color:#2d3e54">
+        <div class="actividades-linea-del-tiempo" style="height:{{getheight}}vh;">
 
             {{#each actividades}}
                 {{>actividadItem}}
@@ -156,8 +125,8 @@
     </div>
 
     <div class="left-navigation">
-        <i class="navigation-button navigation-top fa fa-caret-up fa-2x" aria-hidden="true" style="color:white"></i>
-        <i class="navigation-button navigation-down fa fa-caret-down fa-2x" aria-hidden="true" style="color:white"></i>
+        <i class="navigation-button navigation-top fa fa-caret-up fa-2x" aria-hidden="true" ></i>
+        <i class="navigation-button navigation-down fa fa-caret-down fa-2x" aria-hidden="true" ></i>
     </div>
     <script type="text/javascript" src="skrollr.min.js"></script>
 </template>
