--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -64,15 +64,15 @@
 
         <div data-0="display:none" data-1000="display:block; top:0%" data-1500="display:block; top:50%" data-2000="display:block; top:50%" data-3000="display:block;top:50%" data-3500="display:none;top:-50%" class="fixed-w100">
             <h1>
-                <span data-1000="margin-top:-1000px" data-1800="margin-top:-20px" data-2200="margin-top:0px" class="facebookLink" style="right:40px">K</span>
-                <span data-1500="margin-top:-1000px" data-1800="margin-top:10px" data-2200="margin-top:0px" class="facebookLink" style="right:115px">O</span>
-                <span data-500="margin-top:-1000px" data-2000="margin-top:0px" data-2200="margin-top:0px" class="facebookLink" style="right:195px">O</span>
-                <span data-1500="margin-top:-500px" data-1800="margin-top:50px" data-2200="margin-top:0px" class="facebookLink" style="right:275px">B</span>
-                <span data-1500="margin-top:-1000px" data-2000="margin-top:-15px" data-2200="margin-top:0px" class="facebookLink" style="right:355px">E</span>
-                <span data-1500="margin-top:-700px" data-1800="margin-top:-100px" data-2200="margin-top:0px" class="facebookLink" style="right:430px">C</span>
-                <span data-1500="margin-top:-1000px" data-1800="margin-top:0px" data-2200="margin-top:0px" class="facebookLink" style="right:505px">A</span>
-                <span data-1500="margin-top:-1000px" data-2100="margin-top:15px" data-2200="margin-top:0px" class="facebookLink" style="right:580px">F</span>
-                <a data-1000="margin-top:-1000px;display:none" data-1300="margin-top:-10px;display:none" data-2200="margin-top:-97px;display:block" class="facebookLink-click unite-a-clicker" href="https://www.facebook.com/groups/clubdelectura.uy" target="_blank"></a>
+                <span {{#if isDesktop}}data-1000="margin-top:-1000px" data-1800="margin-top:-20px" data-2200="margin-top:0px" {{/if}} class="facebookLink" style="right:40px">K</span>
+                <span {{#if isDesktop}}data-1500="margin-top:-1000px" data-1800="margin-top:10px" data-2200="margin-top:0px" {{/if}} class="facebookLink" style="right:115px">O</span>
+                <span {{#if isDesktop}}data-500="margin-top:-1000px" data-2000="margin-top:0px" data-2200="margin-top:0px" {{/if}} class="facebookLink" style="right:195px">O</span>
+                <span {{#if isDesktop}} data-1500="margin-top:-500px" data-1800="margin-top:50px" data-2200="margin-top:0px" {{/if}} class="facebookLink" style="right:275px">B</span>
+                <span {{#if isDesktop}}data-1500="margin-top:-1000px" data-2000="margin-top:-15px" data-2200="margin-top:0px" {{/if}} class="facebookLink" style="right:355px">E</span>
+                <span {{#if isDesktop}}data-1500="margin-top:-700px" data-1800="margin-top:-100px" data-2200="margin-top:0px" {{/if}} class="facebookLink" style="right:430px">C</span>
+                <span {{#if isDesktop}}data-1500="margin-top:-1000px" data-1800="margin-top:0px" data-2200="margin-top:0px" {{/if}} class="facebookLink" style="right:505px">A</span>
+                <span {{#if isDesktop}}data-1500="margin-top:-1000px" data-2100="margin-top:15px" data-2200="margin-top:0px" {{/if}} class="facebookLink" style="right:580px">F</span>
+                <a {{#if isDesktop}}data-1000="margin-top:-1000px;display:none" data-1300="margin-top:-10px;display:none" data-2200="margin-top:-97px;display:block"{{/if}} class="facebookLink-click unite-a-clicker" href="https://www.facebook.com/groups/clubdelectura.uy" target="_blank"></a>
             </h1>
             <br>
 
