--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -53,13 +53,18 @@
 
         <div data-0="display:none" data-1000="display:block; top:0%" data-1500="display:block; top:50%" data-2000="display:block; top:50%" data-3000="display:block;top:50%" data-3500="display:none;top:-50%" class="unite-a-container">
             <h1>
-                <span data-1000="margin-top:-900px" data-1800="margin-top:20px" data-2200="margin-top:0px" class="uniteALink" style="right:60px">A</span>
+{{#if isDesktop}}
+
+        <span data-1000="margin-top:-900px" data-1800="margin-top:20px" data-2200="margin-top:0px" class="uniteALink" style="right:60px">A</span>
                 <span data-1500="margin-top:-1000px" data-1800="margin-top:0px" data-2200="margin-top:0px" class="uniteALink" style="right:180px">E</span>
                 <span data-1500="margin-top:-800px" data-2100="margin-top:5px" data-2200="margin-top:0px" class="uniteALink" style="right:250px">T</span>
                 <span data-1500="margin-top:-1200px" data-1800="margin-top:-25px" data-2200="margin-top:0px" class="uniteALink" style="right:315px">I</span>
                 <span data-1500="margin-top:-900px" data-1700="margin-top:-10px" data-2200="margin-top:0px" class="uniteALink" style="right:358px">N</span>
                 <span data-1500="margin-top:-500px" data-2100="margin-top:0px" data-2200="margin-top:0px" class="uniteALink" style="right:426px">U</span>
-            </h1>
+{{else}}
+    <span  class="uniteALink" style="right:40px">UNITE A</span>
+{{/if}}
+    </h1>
         </div>
 
         <div data-0="display:none" data-1000="display:block; top:0%" data-1500="display:block; top:50%" data-2000="display:block; top:50%" data-3000="display:block;top:50%" data-3500="display:none;top:-50%" class="fixed-w100">
