--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -34,16 +34,20 @@
 
     </div>
 
-    <div class="tipita">
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-850="top:0px"    data-1000="top:-1000px" data-3000="top:-1000px" data-3500="display:none;top:-2000px"  class="rotation-slow layer-letras-tipita2"> </div>
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-850="top:0px"    data-1000="top:-1000px" data-3000="top:-1000px" data-3500="display:none;top:-2000px" class="rotation-very-slow layer-letras-tipita"> </div>
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-850="top:0px"    data-1000="top:-900px" data-3000="top:-900px" data-3500="display:none;top:-2000px" class="layer-tipita"> </div>
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-500="transform: translate3d(0px, -150px, 0px); top:0%" data-501=" top:0" data-850="top:0px"    data-1000="top:-900px" data-3000="top:-900px" data-3500="display:none;top:-2000px" class="layer-satie">
+    <div data-0="top:0px; display:block" data-700="top:0px"  data-1000="top:-1000px" data-3000="top:-1000px" data-3500="display:none;top:-2000px" class="tipita">
+        <div class="rotation-slow layer-letras-tipita2"> </div>
+        <div  class="rotation-very-slow layer-letras-tipita"> </div>
+        <div class="layer-tipita"> </div>
+        <div  class="layer-satie">
             <span class="{{satie}}">S</span>
         </div>
 
-        <div class="facebook">
-        <div data-0="display:none" data-1000="display:block; top:0%" data-1500="display:block; top:50%" data-2000="display:block; top:50%" data-3000="display:block;top:50%" data-3500="display:none;top:-50%" class="unite-a-container">
+
+    </div>
+
+
+    <div data-0="display:none" data-1000="display:block; top:0%" data-1500="display:block; top:50%" data-2000="display:block; top:50%" data-3000="display:block;top:50%" data-3500="display:none;top:-50%" class="facebook">
+        <div class="unite-a-container">
             <h1>
 
                 {{#if isDesktop}}
@@ -59,7 +63,7 @@
             </h1>
         </div>
 
-        <div data-0="display:none" data-1000="display:block; top:0%" data-1500="display:block; top:50%" data-2000="display:block; top:50%" data-3000="display:block;top:50%" data-3500="display:none;top:-50%" class="fixed-w100">
+        <div class="fixed-w100">
             <h1>
                 {{#if isDesktop}}
                     <span data-1000="margin-top:-1000px" data-1800="margin-top:-20px" data-2200="margin-top:0px"  class="facebookLink" style="right:40px">K</span>
@@ -76,8 +80,6 @@
                 {{/if}}
             </h1>
             <br>
-
-        </div>
 
         </div>
 
