--- a/imports/ui/users/actividadItem.html
+++ b/imports/ui/users/actividadItem.html
@@ -2,7 +2,7 @@
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <script src="textualizer.js"></script>
 
-    <div id="itemEvent" class="event-timeLine" style="display:block;position:fixed;width:100%;height:100vh;padding:0;">
+    <div id="itemEvent" class="event-timeLine" style="display:block;position:absolute;width:100vw;height:100vh;padding:0;z-index:2">
         <!--only desktop-->
         <div style="margin-left:auto;margin-right:auto;width:1000px;">
         <div class="informacion-actividad desktopOnly" style="{{#if rightTexto}}margin-left:500px{{/if}}">
@@ -50,7 +50,7 @@
            </span>
         </div>
 
-        <!--<div class="template-dibujo" style="">-->
+        <!--<div class="" style="">-->
             {{> Template.dynamic template=getDibujo}}
         <!--</div>-->
         </div>
